--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 # 如在 development 或者 production 模式下, .env.development 或 .env.production 會優先 .env 加載
 # 更詳細內容可查看文檔 - 环境变量和模式:https://cli.vuejs.org/zh/guide/mode-and-env.html#%E6%A8%A1%E5%BC%8F
 # BASE_URL：基础路径
-# VUE_APP_*： 变量
+# VUE_APP_API*： https://
 # 举例，使用：process.env.VUE_APP_API
 VUE_APP_API = https://api.xxx.debug.com/
