环环境变量设置

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # BASE_URL：基础路径
 # VUE_APP_API*： https://
 # 举例，使用：process.env.VUE_APP_API
+NODE_ENV=development
 VUE_APP_API = https://api.xxx.debug.com/
